@startuml ejercicio
abstract class AbstractTweet{
    + <create> AbstractTweet(u:Usuario)
    + getUsuario(): Usuario
}
class Tweet{
    - texto : String;
    + <create>Tweet(u: String, texto:String)
}
class ReTweet{
    + <create> ReTweet(u: String, origen : Tweet)
}
class Twitter{
    - existeUsuario():boolean
    + eliminarUsuario(): boolean
    + crearUsuario(nombre:String):boolean
}
class Usuario{
    - screenName : String
    + <create>Usuario(nombre : String)
    + eliminarTweets()
    + Tweetear(texto:String):boolean
    + ReTweetear(tweet: Tweet)
}
AbstractTweet <|.. Tweet
AbstractTweet <|.. ReTweet
ReTweet --> "1" Tweet
Twitter --> "*" Usuario
Usuario "1" --> "*" AbstractTweet
@enduml